new pizza.htlm description

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,4 +8,4 @@
     <ul>harina</ul>
 <h4>Steps</h4>
    <ol>con harina la pasta</ol> 
-   <ol>con harina la pasta y huevo</ol> 
+   <ol>con harina la pasta y huevoss</ol> 
